Added missing strings

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -117,27 +117,39 @@
   "company.assignments.filter_2": "History",
   "user.register.title": "Sign up",
   "user.register.form.first.name.header": "First name",
+  "user.register.form.first.name.placeholder": "First name",
   "user.register.form.first.name.validation.required": "First name is required",
   "user.register.form.first.name.validation.min.length": "First name must be at least 2 characters long",
   "user.register.form.last.name.header": "Last name",
+  "user.register.form.last.name.placeholder": "Last name",
   "user.register.form.last.name.validation.required": "Last name is required",
   "user.register.form.last.name.validation.min.length": "Last name must be at least 2 characters long",
   "user.register.form.email.header": "Email",
+  "user.register.form.email.placeholder": "Email",
   "user.register.form.email.validation.required": "Email is required",
   "user.register.form.email.validation.pattern": "That is not a valid email",
   "user.register.form.phone.header": "Phone",
+  "user.register.form.phone.placeholder": "Phone",
   "user.register.form.phone.validation.required": "Phone number is required",
   "user.register.form.phone.validation.min.length": "Phone number must be at least 9 characters long",
   "user.register.form.phone.validation.pattern": "Must be a swedish phone number starting with +46",
   "user.register.form.address.header": "Address",
+  "user.register.form.street.placeholder": "Street",
+  "user.register.form.zip.placeholder": "Zip",
+  "user.register.form.city.placeholder": "City",
   "user.register.form.native.language.header": "Native language",
+  "user.register.form.native.language.placeholder": "Native language",
   "user.register.form.native.language.required": "Please choose your native language",
   "user.register.form.default.language.header": "Default language",
+  "user.register.form.default.language.placeholder": "Default language",
   "user.register.form.default.language.description": "This is the language we will use to communicate with you",
   "user.register.form.default.language.required": "Please choose the default language",
   "user.register.form.country.of.origin.header": "Country of origin",
+  "user.register.form.country.of.origin.placeholder": "Country of origin",
   "user.register.form.country.of.origin.required": "Please choose your country of origin",
   "user.register.form.password.header": "Password",
+  "user.register.form.password.placeholder": "Password",
+  "user.register.form.repeat.password.placeholder": "Repeat password",
   "user.register.form.password.validation.min.length": "Password must be at least 6 characters long",
   "user.register.form.repeat.password.validation.mismatch": "Supplied passwords does not match",
   "user.register.form.terms.accept": "I accept Just Arrived's terms, conditions and employment contract",
@@ -147,26 +159,38 @@
   "user.register.form.submit.button": "Sign up",
   "user.settings.form.personal.info.header": "Personal information",
   "user.settings.form.first.name.label": "First name",
+  "user.settings.form.first.name.placeholder": "First name",
   "user.settings.form.first.name.validation.required": "First name is required",
   "user.settings.form.first.name.validation.min.length": "First name must be at least 2 characters long",
   "user.settings.form.last.name.label": "Last name",
+  "user.settings.form.last.name.placeholder": "Last name",
   "user.settings.form.last.name.validation.required": "Last name is required",
   "user.settings.form.last.name.validation.min.length": "Last name must be at least 2 characters long",
   "user.settings.form.email.label": "Email",
+  "user.settings.form.email.placeholder": "Email",
   "user.settings.form.email.validation.pattern": "That is not a valid email",
   "user.settings.form.email.validation.required": "Email is required",
   "user.settings.form.phone.label": "Phone",
+  "user.settings.form.phone.placeholder": "Phone",
   "user.settings.form.phone.validation.required": "Phone number is required",
   "user.settings.form.phone.validation.min.length": "Phone number must be at least 9 characters long",
   "user.settings.form.phone.validation.pattern": "Must be a swedish phone number starting with +46",
+  "user.settings.form.street.placeholder": "Street",
+  "user.settings.form.zip.placeholder": "Zip",
+  "user.settings.form.city.placeholder": "City",
   "user.settings.form.address.header": "Address",
   "user.settings.form.change.password.header": "Password",
+  "user.settings.form.old.password.placeholder": "Old password",
   "user.settings.form.new.password.label": "Change password",
+  "user.settings.form.new.password.placeholder": "New password",
+  "user.settings.form.repeat.password.placeholder": "Repeat password",
   "user.settings.form.new.password.validation.min.length": "Password must be at least 6 characters long",
   "user.settings.form.repeat.password.validation.mismatch": "Supplied passwords does not match",
   "user.settings.form.bank.details.header": "Bank details",
   "user.settings.form.clearing.number.label": "Clearing number",
+  "user.settings.form.clearing.number.placeholder": "Clearing number",
   "user.settings.form.account.number.label": "Account number",
+  "user.settings.form.account.number.placeholder": "Account number",
   "user.settings.form.submit.fail": "There are some errors, please review them above.",
   "user.settings.form.submit.success": "Your profile was updated successfully!",
   "user.settings.form.submit.button": "Save profile changes",
@@ -215,7 +239,9 @@
   "user.profile.form.skills.label": "Skills",
   "user.profile.form.skills.placeholder": "Select Skills",
   "user.profile.form.general.skills.label": "General skills",
+  "user.profile.form.general.skills.placeholder": "General skills",
   "user.profile.form.work.experience.label": "Work experience",
+  "user.profile.form.work.experience.placeholder": "Work experience",
   "user.profile.form.resume.upload.button": "Upload",
   "user.profile.form.resume.upload.description": "Upload your resume",
   "user.profile.form.submit.fail": "There are some errors, please review them above.",
