Refactored subheader styles to headers.scss

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -47,10 +47,20 @@
   "common.error": "Oops, something went a bit wrong... But don't worry, we are on it!",
   "faq": "Questions and answers",
   "faq.answer": "Answers",
-  "login.forgot_password": "Forgotten your password?",
-  "login.form.email_or_phone": "Email or Phone number",
-  "login.form.email_or_phone.validation": "Email or Phone number missing",
-  "login.forgot_password.error": "Unfortunately, your password could not be updated. Click here to try again",
+  "login.title": "Log in",
+  "login.form.forgot.password.link": "Forgotten your password?",
+  "login.form.register.link": "Create account",
+  "login.form.email.or.phone.placeholder": "Email or Phone number",
+  "login.form.email.or.phone.validation.required": "Email or Phone number missing",
+  "login.form.password.placeholder": "Password",
+  "login.form.password.validation.required": "Password missing",
+  "login.form.submit.button": "Log in",
+  "forgot.password.title": "Restore password",
+  "forgot.password.login.link": "Log in",
+  "forgot.password.submit.error": "Unfortunately, a password reset link could not be sent.",
+  "forgot.password.form.email.or.phone.placeholder": "Email or Phone number",
+  "forgot.password.form.email.or.phone.validation.required": "Email or Phone number missing",
+  "forgot.password.form.submit.button": "Send",
   "common.login": "Log in",
   "common.welcome_user": "Welcome {{username}}!",
   "common.edit_profile": "Edit profile",
@@ -110,9 +120,6 @@
   "common.all_jobs": "All jobs ({{nbrOfJobs}})",
   "map.geolocation.error.prefix": "Your location could not be established because",
   "map.geolocation.error.close": "Click to hide.",
-  "login.title": "Log in",
-  "login.form.password": "Password",
-  "login.form.password.validation": "Password missing",
   "company.assignments.filter_1": "Jobs",
   "company.assignments.filter_2": "History",
   "user.register.title": "Sign up",
