--- a/src/assets/i18n/ti.json
+++ b/src/assets/i18n/ti.json
@@ -65,7 +65,8 @@
   "common.welcome_user": "Welcome {{username}}!",
   "common.edit_profile": "Edit profile",
   "start.header.title": "Welcome!",
-  "start.header.body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
+  "start.header.subtitle": "Get the experience you need to enter the Swedish labor market",
+  "start.header.body": "Just Arrived helps you get the credentials you need to enter the Swedish labor market by matching you with Swedish companies. Right now Just Arrived mediates jobs in Stockholm, Gothenburg and Malmö. Create an account to get started!",
   "menu.main.create_account": "Hesabekê biafirîne",
   "menu.main.sign_in": "Sign in",
   "home_page.new_jobs_slider.title": "New jobs",
