Implemented change password page with one time token

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -29,6 +29,9 @@
   "user.apply.find_more": "Search for more jobs",
   "login.forgot_password.confirmation": "A password reset message has been sent to you!",
   "login.forgot_password.confirmation.description": "If you follow the link provided in the message you can thereafter set a new password.",
+  "confirmation.password.reset": "Successfully changed your password!",
+  "confirmation.password.reset.description": "You can now login using your new password.",
+  "confirmation.password.reset.button": "Login",
   "common.back": "Back",
   "contact": "Contact",
   "contact.description": "Questions? Thoughts? We'd love to help!",
@@ -61,6 +64,12 @@
   "forgot.password.form.email.or.phone.placeholder": "Email or Phone number",
   "forgot.password.form.email.or.phone.validation.required": "Email or Phone number missing",
   "forgot.password.form.submit.button": "Send",
+  "reset.password.title": "Set your new password",
+  "reset.password.form.password.placeholder": "New password",
+  "reset.password.form.password.validation.required": "New password missing",
+  "reset.password.form.password.validation.min.length": "Password must be atleast 6 characters long",
+  "reset.password.form.submit.error": "Unfortunately, the password could not be changed. Please request a new password reset link and try again.",
+  "reset.password.form.submit.button": "Change password",
   "common.login": "Log in",
   "common.welcome_user": "Welcome {{username}}!",
   "common.edit_profile": "Edit profile",
