Added default language dropdown to profile view

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -209,6 +209,10 @@
   "user.settings.form.submit.fail": "There are some errors, please review them above.",
   "user.settings.form.submit.success": "Your profile was updated successfully!",
   "user.settings.form.submit.button": "Save profile changes",
+  "user.profile.form.default.language.label": "Default language",
+  "user.profile.form.default.language.placeholder": "Default language",
+  "user.profile.form.default.language.description": "This is the language we will use to communicate with you",
+  "user.profile.form.default.language.required": "Please choose the default language",
   "user.profile.form.native.language.label": "Native language",
   "user.profile.form.native.language.placeholder": "Select Language",
   "user.profile.form.native.language.validation.required": "Native language is required",
