:hocho: syntax error in en.json

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -269,5 +269,5 @@
   "user.settings.form.submit.button": "Save profile changes",
   "user.settings.form.submit.fail": "There are some errors, please review them above.",
   "user.settings.form.submit.success": "Your profile was updated successfully!",
-  "user.settings.form.zip.placeholder": "Zip",
+  "user.settings.form.zip.placeholder": "Zip"
 }
