Added header and placeholder for gender

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -209,6 +209,9 @@
   "user.register.form.email.validation.required": "Email is required",
   "user.register.form.first.name.header": "First name",
   "user.register.form.first.name.placeholder": "First name",
+  "user.register.form.gender.header": "Gender",
+  "user.register.form.gender.placeholder": "Gender",
+  "user.register.form.gender.required": "Please select a gender",
   "user.register.form.first.name.validation.min.length": "First name must be at least 2 characters long",
   "user.register.form.first.name.validation.required": "First name is required",
   "user.register.form.last.name.header": "Last name",
