Update SV locale

--- a/src/assets/i18n/sv.json
+++ b/src/assets/i18n/sv.json
@@ -65,10 +65,10 @@
   "common.welcome_user": "Välkommen {{username}}!",
   "common.edit_profile": "Redigera profil",
   "start.header.title": "Välkommen!",
-  "start.header.subtitle": "Get the experience you need to enter the Swedish labor market",
+  "start.header.subtitle": "Få erfarenheten du behöver för att komma in på den svenska arbetsmarknaden",
   "start.header.body": "Just Arrived helps you get the credentials you need to enter the Swedish labor market by matching you with Swedish companies. Right now Just Arrived mediates jobs in Stockholm, Gothenburg and Malmö. Create an account to get started!",
   "menu.main.create_account": "Skapa konto",
-  "menu.main.sign_in": "Logga in",
+  "menu.main.sign_in": "Logga i",
   "home_page.new_jobs_slider.title": "Nya Uppdrag",
   "home_page.jobs_applied_for.title": "Sökta uppdrag",
   "common.show_all": "Visa alla",
@@ -167,7 +167,7 @@
   "user.register.form.submit.fail": "Det finns några fel då måste åtgärda ovan.",
   "user.register.form.submit.success": "Ditt konto har skapats. Du kan nu använda det för att logga in.",
   "user.register.form.submit.button": "Registera",
-  "user.settings.form.personal.info.header": "Personlig informatio",
+  "user.settings.form.personal.info.header": "Personlig information",
   "user.settings.form.first.name.label": "Förnamn",
   "user.settings.form.first.name.placeholder": "Förnamn",
   "user.settings.form.first.name.validation.required": "Förnamn måste anges",
