contact component refactoring

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -46,18 +46,19 @@
   "confirmation.password.reset": "Successfully changed your password!",
   "contact.confirmation.navigate.back": "Back to contact",
   "contact.confirmation.title": "Thanks for your message! We will reply as soon as we can.",
-  "contact.description": "Questions? Thoughts? We'd love to help!",
+  "contact.form.description": "Questions? Thoughts? We'd love to help!",
   "contact.form.email.validation.length": "Your email must be at least 6 characters long",
-  "contact.form.email.validation": "You need to enter your email",
-  "contact.form.email": "Email",
+  "contact.form.email.validation.required": "You need to enter your email",
+  "contact.form.email.placeholder": "Email",
   "contact.form.message.validation.length": "Your message must be at least 2 characters long",
-  "contact.form.message.validation": "You need to enter a message",
-  "contact.form.message": "Message",
+  "contact.form.message.validation.required": "You need to enter a message",
+  "contact.form.message.placeholder": "Message",
   "contact.form.name.validation.length": "Your name must be at least 2 characters long",
-  "contact.form.name.validation": "You need to enter your name",
-  "contact.form.name": "Name",
-  "contact.instruction": "Enter your details below.",
-  "contact": "Contact",
+  "contact.form.name.validation.required": "You need to enter your name",
+  "contact.form.name.placeholder": "Name",
+  "contact.form.instruction": "Enter your details below.",
+  "contact.form.submit.button": "Send",
+  "contact.title": "Contact",
   "cookies.description": "By using the justarrived.se website, you agree to the use of cookies by us and third parties to enhance your experience. For more information, or to change your cookie settings.",
   "cookies.info.description": "We use cookies for technical reasons to simplify the use of our services and to give you the user more relevant information when your visit our website. Cookies are also used to measure traffic to our website, for the collection of data and to improve our services. By using our services, you accept that we use cookies, as long as you have not disabled them in your cookies settings in your web browser.",
   "cookies.info.title": "About cookies",
