--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -105,8 +105,8 @@
   "menu.main.my_assignment": "My jobs",
   "menu.main.profile": "Profile",
   "menu.main.sign_in": "Sign in",
-  "page_not_found_error.header": "404 - Page Not Found",
-  "page_not_found_error.subtitle": "Sorry, the page you are looking for does not exist.",
+  "page.not.found.error.title": "404 - Page Not Found",
+  "page.not.found.error.description": "Sorry, the page you are looking for does not exist.",
   "reset.password.form.password.placeholder": "New password",
   "reset.password.form.password.validation.min.length": "Password must be atleast 6 characters long",
   "reset.password.form.password.validation.required": "New password missing",
