--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,7 +22,6 @@
   "assignment.status.reply": "Provide answer",
   "assignment.status.user_company_hire": "The company wants to hire you",
   "assignment.status.you_hired": "You've been hired",
-  "common.all_jobs": "All jobs ({{nbrOfJobs}})",
   "common.back": "Back",
   "common.congratulation": "Congratulations!",
   "common.edit_profile": "Edit profile",
@@ -47,16 +46,16 @@
   "contact.confirmation.navigate.back": "Back to contact",
   "contact.confirmation.title": "Thanks for your message! We will reply as soon as we can.",
   "contact.form.description": "Questions? Thoughts? We'd love to help!",
+  "contact.form.email.placeholder": "Email",
   "contact.form.email.validation.length": "Your email must be at least 6 characters long",
   "contact.form.email.validation.required": "You need to enter your email",
-  "contact.form.email.placeholder": "Email",
+  "contact.form.instruction": "Enter your details below.",
+  "contact.form.message.placeholder": "Message",
   "contact.form.message.validation.length": "Your message must be at least 2 characters long",
   "contact.form.message.validation.required": "You need to enter a message",
-  "contact.form.message.placeholder": "Message",
+  "contact.form.name.placeholder": "Name",
   "contact.form.name.validation.length": "Your name must be at least 2 characters long",
   "contact.form.name.validation.required": "You need to enter your name",
-  "contact.form.name.placeholder": "Name",
-  "contact.form.instruction": "Enter your details below.",
   "contact.form.submit.button": "Send",
   "contact.title": "Contact",
   "cookies.description": "By using the justarrived.se website, you agree to the use of cookies by us and third parties to enhance your experience. For more information, or to change your cookie settings.",
@@ -80,6 +79,7 @@
   "home_page.user_jobs_slider_item.status.finished": "Finnished",
   "home_page.user_jobs_slider_item.status.ongoing": "Ongoing",
   "home_page.user_jobs_slider.title": "My jobs",
+  "jobs.title": "All jobs ({{nbrOfJobs}})",
   "login.forgot_password.confirmation.description": "If you follow the link provided in the message you can thereafter set a new password.",
   "login.forgot_password.confirmation": "A password reset message has been sent to you!",
   "login.form.email.or.phone.placeholder": "Email or Phone number",
@@ -91,7 +91,11 @@
   "login.form.submit.button": "Log in",
   "login.title": "Log in",
   "map.geolocation.error.close": "Click to hide.",
-  "map.geolocation.error.prefix": "Your location could not be established because",
+  "map.geolocation.error.permissionDenied": "you have disabled access to your location for this site.",
+  "map.geolocation.error.positionUnavailable": "we are unable to determine your location.",
+  "map.geolocation.error.prefix": "Your location could not be established because {{mapError}}",
+  "map.geolocation.error.timeout": "service timeout has been reached.",
+  "map.geolocation.error.unsupportedBrowser": "your browser does not support location services.",
   "menu.language.text_1": "You can go back and change your selected language later if you like.",
   "menu.language.text_2": "Jobs, comments and messages are translated automatically.",
   "menu.language.title": "Select language",
@@ -105,8 +109,8 @@
   "menu.main.my_assignment": "My jobs",
   "menu.main.profile": "Profile",
   "menu.main.sign_in": "Sign in",
-  "page.not.found.error.title": "404 - Page Not Found",
   "page.not.found.error.description": "Sorry, the page you are looking for does not exist.",
+  "page.not.found.error.title": "404 - Page Not Found",
   "reset.password.form.password.placeholder": "New password",
   "reset.password.form.password.validation.min.length": "Password must be atleast 6 characters long",
   "reset.password.form.password.validation.required": "New password missing",
@@ -138,8 +142,8 @@
   "user.apply.find_more": "Search for more jobs",
   "user.profile.form.at.und.label": "AT-UND",
   "user.profile.form.coordination.number.label": "Please provide the coordination number",
-  "user.profile.form.coordination.number.placeholder": "Coordination number",
   "user.profile.form.coordination.number.or.ssn.label": "Social security number or coordination number",
+  "user.profile.form.coordination.number.placeholder": "Coordination number",
   "user.profile.form.country.label": "Country of origin",
   "user.profile.form.country.placeholder": "Select Country",
   "user.profile.form.country.validation.required": "Country of origin is required",
@@ -150,6 +154,7 @@
   "user.profile.form.general.skills.label": "General skills",
   "user.profile.form.general.skills.placeholder": "General skills",
   "user.profile.form.got.coordination.number.label": "Coordination number",
+  "user.profile.form.language.proficiency.placeholder": "Language proficiency",
   "user.profile.form.languages.label": "Other language skills",
   "user.profile.form.languages.placeholder": "Select Languages",
   "user.profile.form.lma.upload.button": "Upload",
@@ -177,6 +182,7 @@
   "user.profile.form.skatteverket.certificate.upload.description": "Upload photo of coordination number certificate (from the swedish tax agency)",
   "user.profile.form.skatteverket.certificate.upload.fail": "Photo of coordination number certificate could not be uploaded",
   "user.profile.form.skatteverket.certificate.upload.success": "Photo of coordination number certificate has been uploaded",
+  "user.profile.form.skill.proficiency.placeholder": "Skill proficiency",
   "user.profile.form.skills.label": "Skills",
   "user.profile.form.skills.placeholder": "Select Skills",
   "user.profile.form.ssn.label": "Social security number",
@@ -194,8 +200,6 @@
   "user.profile.form.work.permit.front.upload.description": "Upload front photo of work permit",
   "user.profile.form.work.permit.front.upload.fail": "Front photo of work permit could not be uploaded",
   "user.profile.form.work.permit.front.upload.success": "Front photo of work permit has been uploaded",
-  "user.profile.form.language.proficiency.placeholder": "Language proficiency",
-  "user.profile.form.skill.proficiency.placeholder": "Skill proficiency",
   "user.profile.header.information": "Remember that a complete profile increases your chances of getting jobs",
   "user.profile.header.title": "Profile",
   "user.profile.tab.personal.details.title": "Personal details",
@@ -215,11 +219,11 @@
   "user.register.form.email.validation.required": "Email is required",
   "user.register.form.first.name.header": "First name",
   "user.register.form.first.name.placeholder": "First name",
+  "user.register.form.first.name.validation.min.length": "First name must be at least 2 characters long",
+  "user.register.form.first.name.validation.required": "First name is required",
   "user.register.form.gender.header": "Gender",
   "user.register.form.gender.placeholder": "Gender",
   "user.register.form.gender.required": "Please select a gender",
-  "user.register.form.first.name.validation.min.length": "First name must be at least 2 characters long",
-  "user.register.form.first.name.validation.required": "First name is required",
   "user.register.form.last.name.header": "Last name",
   "user.register.form.last.name.placeholder": "Last name",
   "user.register.form.last.name.validation.min.length": "Last name must be at least 2 characters long",
