Refactored confirmation component

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -40,11 +40,17 @@
   "common.yes": "Yes",
   "company.assignments.filter_1": "Jobs",
   "company.assignments.filter_2": "History",
+  "confirmation.applied.for.job.button": "Search for more jobs",
+  "confirmation.applied.for.job.description": "We're crossing our fingers for you right now. If the employer makes an offer, you have 18 hours to accept the offer. You'll find the job under My Jobs. This is where you'll also find all communication that happens between you and the employer.",
+  "confirmation.applied.for.job.title": "You have applied for the job",
+  "confirmation.contact.button": "Back to contact",
+  "confirmation.contact.title": "Thanks for your message! We will reply as soon as we can.",
   "confirmation.password.reset.button": "Login",
   "confirmation.password.reset.description": "You can now login using your new password.",
-  "confirmation.password.reset": "Successfully changed your password!",
-  "contact.confirmation.navigate.back": "Back to contact",
-  "contact.confirmation.title": "Thanks for your message! We will reply as soon as we can.",
+  "confirmation.password.reset.link.button": "Back",
+  "confirmation.password.reset.link.description": "If you follow the link provided in the message you can thereafter set a new password.",
+  "confirmation.password.reset.link.title": "A password reset message has been sent to you!",
+  "confirmation.password.reset.title": "Successfully changed your password!",
   "contact.form.description": "Questions? Thoughts? We'd love to help!",
   "contact.form.email.placeholder": "Email",
   "contact.form.email.validation.length": "Your email must be at least 6 characters long",
@@ -80,8 +86,6 @@
   "home_page.user_jobs_slider_item.status.ongoing": "Ongoing",
   "home_page.user_jobs_slider.title": "My jobs",
   "jobs.title": "All jobs ({{nbrOfJobs}})",
-  "login.forgot_password.confirmation.description": "If you follow the link provided in the message you can thereafter set a new password.",
-  "login.forgot_password.confirmation": "A password reset message has been sent to you!",
   "login.form.email.or.phone.placeholder": "Email or Phone number",
   "login.form.email.or.phone.validation.required": "Email or Phone number missing",
   "login.form.forgot.password.link": "Forgotten your password?",
@@ -137,9 +141,6 @@
   "user.account.cardnr": "Account number",
   "user.account.description": "Where would you like your salary to be paid out once you have completed the job?",
   "user.account": "Bank account details",
-  "user.apply.confirmation.text": "We're crossing our fingers for you right now. If the employer makes an offer, you have 18 hours to accept the offer. You'll find the job under My Jobs. This is where you'll also find all communication that happens between you and the employer.",
-  "user.apply.confirmation": "You have applied for the job",
-  "user.apply.find_more": "Search for more jobs",
   "user.profile.form.at.und.label": "AT-UND",
   "user.profile.form.coordination.number.label": "Please provide the coordination number",
   "user.profile.form.coordination.number.or.ssn.label": "Social security number or coordination number",
