--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -100,6 +100,8 @@
   "home.jobs.slider.user.jobs.job.ended.label": "Finnished",
   "home.jobs.slider.user.jobs.title": "My jobs",
   "home.jobs.slider.user.jobs.will.perform.job.label": "Ongoing",
+  "home.partners.description": "Just Arrived is a joint pro-bono initiative designed to help newly arrived immigrants to the Swedish labour market. We are owned by a foundation and is run by an association of companies.",
+  "home.partners.title": "Our partners",
   "jobs.title": "All jobs ({{nbrOfJobs}})",
   "login.form.email.or.phone.placeholder": "Email or Phone number",
   "login.form.email.or.phone.validation.required": "Email or Phone number missing",
@@ -134,8 +136,6 @@
   "reset.password.form.submit.button": "Change password",
   "reset.password.form.submit.error": "Unfortunately, the password could not be changed. Please request a new password reset link and try again.",
   "reset.password.title": "Set your new password",
-  "start.partner_section.text": "Just Arrived is a joint pro-bono initiative designed to help newly arrived immigrants to the Swedish labour market. We are owned by a foundation and is run by an association of companies.",
-  "start.partner_section.title": "Our partners",
   "terms.frilans_finans.accept": "I accept Frilans Finans",
   "terms": "terms, conditions and employment contract",
   "user.account.bank": "Clearing number",
