--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -103,6 +103,11 @@
   "home.partners.description": "Just Arrived is a joint pro-bono initiative designed to help newly arrived immigrants to the Swedish labour market. We are owned by a foundation and is run by an association of companies.",
   "home.partners.title": "Our partners",
   "jobs.title": "All jobs ({{nbrOfJobs}})",
+  "language.proficiency.basic": "Basic knowledge",
+  "language.proficiency.beginner": "Beginner",
+  "language.proficiency.expert": "Native speaker",
+  "language.proficiency.intermediate": "Working proficiency",
+  "language.proficiency.professional": "Professional proficiency",
   "login.form.email.or.phone.placeholder": "Email or Phone number",
   "login.form.email.or.phone.validation.required": "Email or Phone number missing",
   "login.form.forgot.password.link": "Forgotten your password?",
@@ -136,6 +141,11 @@
   "reset.password.form.submit.button": "Change password",
   "reset.password.form.submit.error": "Unfortunately, the password could not be changed. Please request a new password reset link and try again.",
   "reset.password.title": "Set your new password",
+  "skill.proficiency.basic": "Basic knowledge",
+  "skill.proficiency.beginner": "Beginner",
+  "skill.proficiency.expert": "Expert",
+  "skill.proficiency.intermediate": "Intermediate knowledge",
+  "skill.proficiency.professional": "Professional",
   "terms.frilans_finans.accept": "I accept Frilans Finans",
   "terms": "terms, conditions and employment contract",
   "user.account.bank": "Clearing number",
