Added gender placeholder and warning text

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -281,6 +281,8 @@
   "user.settings.form.last.name.validation.min.length": "Last name must be at least 2 characters long",
   "user.settings.form.last.name.validation.required": "Last name is required",
   "user.settings.form.gender.label": "Gender",
+  "user.settings.form.gender.placeholder": "Gender",
+  "user.settings.form.gender.validation.required": "Gender is required",
   "user.settings.form.new.password.label": "Change password",
   "user.settings.form.new.password.placeholder": "New password",
   "user.settings.form.new.password.validation.min.length": "Password must be at least 6 characters long",
