Update startpage explain section

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -85,19 +85,20 @@
   "home.header.logged.out.register.button": "Create account",
   "home.header.logged.out.sub.title": "Get the experience you need to enter the Swedish labor market",
   "home.header.logged.out.title": "Welcome!",
-  "home.instructions.first.section.instruction1": "Search for jobs near you",
-  "home.instructions.first.section.instruction2": "Do job",
-  "home.instructions.first.section.instruction3": "Get paid within two weeks",
+  "home.instructions.first.section.instruction0": "Sign in or create an account",
+  "home.instructions.first.section.instruction1": "Apply for jobs near you",
+  "home.instructions.first.section.instruction2": "Receive offer",
+  "home.instructions.first.section.instruction3": "Accept offer",
   "home.instructions.first.section.title": "This is how it works:",
-  "home.instructions.second.section.description": "This is what you need:",
-  "home.instructions.second.section.instruction1": "Co-ordination number or personal ID number",
-  "home.instructions.second.section.instruction2": "Access to a bank account",
-  "home.instructions.second.section.instruction3": "Work permit",
-  "home.instructions.second.section.title": "Create your profile!",
+  "home.instructions.second.section.description": "In order to increase your chances getting a job:",
+  "home.instructions.second.section.instruction1": "Apply to all jobs that you like",
+  "home.instructions.second.section.instruction2": "Fill out your profile",
+  "home.instructions.second.section.instruction3": "Login often and make sure your profile is up to date",
+  "home.instructions.second.section.title": "Maximize your chances",
   "home.jobs.applied.for.title": "Jobs applied for",
   "home.jobs.slider.new.jobs.title": "New jobs",
   "home.jobs.slider.show.all.link": "Show all",
-  "home.jobs.slider.user.jobs.job.ended.label": "Finnished",
+  "home.jobs.slider.user.jobs.job.ended.label": "Finished",
   "home.jobs.slider.user.jobs.title": "My jobs",
   "home.jobs.slider.user.jobs.will.perform.job.label": "Ongoing",
   "home.partners.description": "Just Arrived is a joint pro-bono initiative designed to help newly arrived immigrants to the Swedish labour market. We are owned by a foundation and is run by an association of companies.",
