Login/Log in => Sign in

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -27,7 +27,7 @@
   "common.error": "Oops, something went a bit wrong... But don't worry, we are on it!",
   "common.find_assignment": "Find jobs",
   "common.hour": "hours",
-  "common.login": "Log in",
+  "common.login": "Sign in",
   "common.min": "minutes",
   "common.net_salary": "after tax",
   "common.no": "No",
@@ -42,8 +42,8 @@
   "confirmation.applied.for.job.title": "You have applied for the job",
   "confirmation.contact.button": "Back to contact",
   "confirmation.contact.title": "Thanks for your message! We will reply as soon as we can.",
-  "confirmation.password.reset.button": "Login",
-  "confirmation.password.reset.description": "You can now login using your new password.",
+  "confirmation.password.reset.button": "Sign in",
+  "confirmation.password.reset.description": "You can now sign in using your new password.",
   "confirmation.password.reset.link.button": "Back",
   "confirmation.password.reset.link.description": "If you follow the link provided in the message you can thereafter set a new password.",
   "confirmation.password.reset.link.title": "A password reset message has been sent to you!",
@@ -74,7 +74,7 @@
   "forgot.password.form.email.or.phone.placeholder": "Email or Phone number",
   "forgot.password.form.email.or.phone.validation.required": "Email or Phone number missing",
   "forgot.password.form.submit.button": "Send",
-  "forgot.password.login.link": "Log in",
+  "forgot.password.login.link": "Sign in",
   "forgot.password.submit.error": "Unfortunately, a password reset link could not be sent.",
   "forgot.password.title": "Restore password",
   "home.header.logged.in.jobs.button": "Find jobs",
@@ -93,7 +93,7 @@
   "home.instructions.second.section.description": "In order to increase your chances getting a job:",
   "home.instructions.second.section.instruction1": "Apply to all jobs that you like",
   "home.instructions.second.section.instruction2": "Fill out your profile",
-  "home.instructions.second.section.instruction3": "Login often and make sure your profile is up to date",
+  "home.instructions.second.section.instruction3": "Sign in often and make sure your profile is up to date",
   "home.instructions.second.section.title": "Maximize your chances",
   "home.jobs.applied.for.title": "Jobs applied for",
   "home.jobs.slider.new.jobs.title": "New jobs",
@@ -115,8 +115,8 @@
   "login.form.password.placeholder": "Password",
   "login.form.password.validation.required": "Password missing",
   "login.form.register.link": "Create account",
-  "login.form.submit.button": "Log in",
-  "login.title": "Log in",
+  "login.form.submit.button": "Sign in",
+  "login.title": "Sign in",
   "map.geolocation.error.close": "Click to hide.",
   "map.geolocation.error.permissionDenied": "you have disabled access to your location for this site.",
   "map.geolocation.error.positionUnavailable": "we are unable to determine your location.",
@@ -130,7 +130,7 @@
   "menu.main.contact": "Contact",
   "menu.main.faq": "Questions and Answers",
   "menu.main.find_assignment": "Find jobs",
-  "menu.main.login": "Log in",
+  "menu.main.login": "Sign in",
   "menu.main.logout": "Log out",
   "menu.main.my_assignment": "My jobs",
   "menu.main.profile": "Profile",
@@ -256,7 +256,7 @@
   "user.register.form.street.placeholder": "Street",
   "user.register.form.submit.button": "Sign up",
   "user.register.form.submit.fail": "There are some errors, please review them above.",
-  "user.register.form.submit.success": "Your account was successfully created. You can now use it to login.",
+  "user.register.form.submit.success": "Your account was successfully created. You can now use it to sign in.",
   "user.register.form.terms.accept": "I accept Just Arrived's terms, conditions and employment contract",
   "user.register.form.terms.validation.required": "To signup you have to agree to the terms above",
   "user.register.form.zip.placeholder": "Zip",
